fix(gateway): optimize rate limiting and CORS configuration
Rate limiting:
- OTP endpoints: 3 req/s per IP (was 10 — brute force protection)
- Ride creation: 5 req/s per user (was 30 — prevent spam requests)
- Location updates: 60 req/s per user (was 30 — frequent GPS updates)
- General authenticated: 30 req/s per user (unchanged)
- Separated auth-otp route from auth-service for stricter limits

IP resolver:
- Now supports X-Forwarded-For header for deployments behind
  load balancer/reverse proxy
- Extracts first IP from comma-separated chain
- Falls back to direct remote address

CORS:
- Origins configurable via CORS_ALLOWED_ORIGINS env var
- Environment-aware: dev includes localhost:3000/5173, prod is strict
- Tightened allowedHeaders to specific list (was wildcard *)
- Updated domains to twende.co.tz

30 tests passing (4 new IP resolver tests), >=80% coverage.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>